fix(material-experimental/mdc-form-field): ensure clip-path does not truncate label early (#25264)

--- a/src/material-experimental/mdc-form-field/form-field.scss
+++ b/src/material-experimental/mdc-form-field/form-field.scss
@@ -128,12 +128,12 @@
 // shaped artifact where it meets the top and bottom borders.)
 .mat-mdc-form-field .mdc-notched-outline__notch {
   margin-left: -1px;
-  @include mat.private-clip-path(inset(-9em -9em -9em 1px));
+  @include mat.private-clip-path(inset(-9em -999em -9em 1px));
 
   [dir='rtl'] & {
     margin-left: 0;
     margin-right: -1px;
-    @include mat.private-clip-path(inset(-9em 1px -9em -9em));
+    @include mat.private-clip-path(inset(-9em 1px -9em -999em));
   }
 }
 
